ajaxsetup추가; mail_validation api 추가

--- a/checkmail/templates/checkmail/index.html
+++ b/checkmail/templates/checkmail/index.html
@@ -1,4 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
-    haha
+<h1>Email Validation</h1>
+
+<div class="input-group mb-3">
+  <input id='email-to-verify' type="text" class="form-control" placeholder="이메일을 입력하세요." aria-label="Email to verify" aria-describedby="button-verify">
+  <div class="input-group-append">
+    <button class="btn btn-outline-secondary" type="button" id="button-verify">검사</button>
+  </div>
+</div>
+
+{% endblock %}
+{% block script %}
+<script>
+    $('#button-verify').on('click', function(){
+      var email = $('#email-to-verify').value
+      var post_data = { email: email }
+      $.ajax({
+        method:'post',
+        data:post_data
+      })
+      .then(function(result){
+        console.log(result)
+      })
+      .catch(function(error){
+        console.log(error)
+      })
+    })
+</script>
 {% endblock %}
