--- a/templates/header.html
+++ b/templates/header.html
@@ -1,11 +1,19 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a href="{% url 'checkmail:index' %}" class='navbar-brand'>checkmail️</a>
+      <a href="{% url 'index' %}" class='navbar-brand'>checkmail️</a>
 
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class='nav-link' href='{% url "logout"  %}'>로그아웃</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class='nav-link' href='{% url "login"  %}'>로그인</a>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
