--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -15,7 +15,7 @@
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'user:login' %}">
+<form method="post" action="{% url 'login' %}">
 {% csrf_token %}
     <div class="form-group">
       {{ form.username }}
@@ -25,7 +25,7 @@
     </div>
 
     <input class="btn btn-primary" type="submit" value="로그인">
-    <a href="{% url 'user:signup' %}" class="btn btn-outline-primary">가입</a>
+    <a href="{% url 'signup' %}" class="btn btn-outline-primary">가입</a>
 <input type="hidden" name="next" value="{{ next }}">
 </form>
 
