--- a/user/templates/user/signup.html
+++ b/user/templates/user/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} 
 {% block content %}
 <h3>회원가입</h3>
-<form action="{% url 'user:signup' %}" method='POST'>
+<form action="{% url 'signup' %}" method='POST'>
   {% csrf_token %}
   {% for field in form %}
     <div>{{ field.label_tag }}</div>
