--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a href="{% url 'index' %}" class='navbar-brand'>checkmail️</a>
+      <a href="{% url 'index' %}" class='navbar-brand'>mail check 📫</a>
     </div>
   </nav>
 </header>
